profilelist1exp/unpackaged/objects/MDF_Contact__c.object
<CustomObject>
    <description>Viper Project</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Auto_populate_string_1_hidden__c</fullName>
        <formula>User__r.Phone &amp; User__r.Email &amp; User__r.Profile_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto populate string 1 hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_populate_string_2_hidden__c</fullName>
        <formula>Phone__c &amp; Email__c &amp; TEXT (Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto populate string 2 hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Corporate Events</fullName>
                </value>
                <value>
                    <fullName>Global Business</fullName>
                </value>
                <value>
                    <fullName>Int&apos;l</fullName>
                </value>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Medium Business</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Client Peripherals</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Displays</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Enterprise</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Imaging</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Operations</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>WWP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Town__c</fullName>
        <label>City / Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Countries</fullName>
                </value>
                <value>
                    <fullName>ANDEAN</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>NOLA</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MDF_Contact_Unique__c</fullName>
        <label>MDF_Contact_Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notify_When_APV_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify When APV Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to country Object for Partner Contact PL of MDF Contact.</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>MDF Contacts</relationshipLabel>
        <relationshipName>MDF_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Type__c</fullName>
        <label>Partner Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Headcount-Billing</fullName>
                </value>
                <value>
                    <fullName>Headcount-Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Secondary__c</fullName>
        <label>Primary / Secondary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repopulate_hidden__c</fullName>
        <formula>IF ( Auto_populate_string_1_hidden__c = Auto_populate_string_2_hidden__c, &quot;No&quot;, &quot;Yes&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repopulate hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>UK-I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip / Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MDF Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDF Contacts</pluralLabel>
    <recordTypes>
        <fullName>Co_Marketing_Contact</fullName>
        <active>true</active>
        <description>Partner Manager on S&amp;P Co-Marketing team (MDF Team)</description>
        <label>Co-Marketing Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Contact</fullName>
        <active>true</active>
        <description>Marketing or Billing contact at Partner company</description>
        <label>Partner Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Manager_Contact</fullName>
        <active>true</active>
        <description>Partner Manager on S&amp;P Product Marketing team</description>
        <label>Product Manager Contact</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Viper_Zip_Postal_Code_VRule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( LEN(Zip_Postal_Code__c) &lt;&gt; 0 ,NOT(ISNUMBER( Zip_Postal_Code__c )))</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Enter numbers only</errorMessage>
    </validationRules>
</CustomObject>